--- a/package.json
+++ b/package.json
@@ -28,7 +28,14 @@
     "@ionic/pro": "2.0.3",
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.1",
+    "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.0.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.7.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -37,7 +44,8 @@
     "phonegap-plugin-barcodescanner": "8.0.1",
     "promise-polyfill": "^8.1.0",
     "remove-node-modules": "^1.7.4",
-    "rxjs": "5.5.11",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
@@ -49,7 +57,18 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
-      "phonegap-plugin-barcodescanner": {}
-    }
+      "phonegap-plugin-barcodescanner": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
